--- a/templates/social_events.html
+++ b/templates/social_events.html
@@ -81,6 +81,12 @@
 </head>
 <body>
   <div class="form-container">
+     <div class="nav">
+        <a href="/index">Home</a>
+        <a href="/about">About us</a>
+        <a href="/contact">Contact us</a>
+     </div>
+  <div class="form-container">
     <h4 class="mb-4">👋 Hello, <strong>{{ username }}</strong></h4>
     <h3 class="mb-4">Plan Your Perfect Event</h3>
 
