--- a/templates/seasonal_events.html
+++ b/templates/seasonal_events.html
@@ -83,6 +83,12 @@
 </head>
 <body>
   <div class="form-container">
+     <div class="nav">
+        <a href="/index">Home</a>
+        <a href="/about">About us</a>
+        <a href="/contact">Contact us</a>
+    </div>
+  <div class="form-container">
     <h4 class="mb-3">🌟 Welcome, <strong>{{ username }}</strong></h4>
     <h3 class="mb-4">Celebrate the Season in Style 🎉</h3>
 
