--- a/templates/membership.html
+++ b/templates/membership.html
@@ -88,11 +88,11 @@
     </head>
     <body>
         <header>
-        <div class="nav">
-        <a href="/">Home</a><br>
+     <div class="nav">
+        <a href="/index">Home</a>
         <a href="/about">About us</a>
-        <a href="/contact">Contact Us</a>
-        </div>
+        <a href="/contact">Contact us</a>
+    </div>
           <h1>🎉Enjoy Premium Membership !!</h1>
         </header>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
