social_events.html

--- a/templates/social_events.html
+++ b/templates/social_events.html
@@ -17,6 +17,15 @@
       justify-content: center;
       backdrop-filter: blur(5px);
     }
+    .nav {
+            color: #cccccc;
+            display: flex;
+            padding-left: 400px;
+            gap: 10px;
+        }
+        a{
+          color: white;
+        }
 
     .form-container {
       background: rgba(0, 0, 0, 0.65);
