--- a/templates/seasonal_events.html
+++ b/templates/seasonal_events.html
@@ -30,6 +30,15 @@
       box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
       animation: bounceIn 1s ease;
     }
+    .nav {
+            color: #131212;
+            display: flex;
+            padding-left: 400px;
+            gap: 10px;
+        }
+        a{
+          color: black;
+        }
 
     @keyframes bounceIn {
       0% { transform: scale(0.8); opacity: 0; }
