health_events.html

--- a/templates/health_events.html
+++ b/templates/health_events.html
@@ -29,6 +29,15 @@
         filter: blur(0);
       }
     }
+    .nav {
+            color: #cccccc;
+            display: flex;
+            padding-left: 400px;
+            gap: 10px;
+        }
+        a{
+          color: white;
+        }
 
     .form-container {
       background: rgba(255, 255, 255, 0.1);
@@ -104,6 +113,12 @@
     }
   </style>
 </head>
+  <div class="form-container">
+     <div class="nav">
+        <a href="/index">Home</a>
+        <a href="/about">About us</a>
+        <a href="/contact">Contact us</a>
+     </div>
 <body>
   <div class="form-container">
     <h4 class="mb-3">🌿 Welcome, <strong>{{ username }}</strong></h4>
