--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,9 @@
             <img src="https://cdn.pixabay.com/photo/2013/09/08/19/54/fireworks-180553_1280.jpg" class="card-img-top" style="height: 225px; object-fit: cover;" alt="Concert Night">
             <div class="card-body">
               <h5 class="card-title fw-bold mb-2">Seasonal Events</h5>
-              <p class="Card-text"> Bring in the festive cheer with vibrant seasonal celebrations</p>
+              <p class="Card-text"> Bring in the festive cheer with vibrant seasonal celebrations</p></a>
+                 <a href="{% url 'dandiya' %}">
+              <button class="btn btn-primary" value="add dandiya booking">Celebrate Dandiya with us</button>
             </div>
           </div>
         </a>
@@ -133,10 +135,10 @@
           </div>
         </a>
       </div>
-
     </div>
   </div>
 </div>
+<div class="d-flex">
 <section class="word-cloud-section">
   <a href="{% url 'social_events' %}">
   <h2 class="section-title">Social Events</h2>
@@ -322,7 +324,6 @@
 .violet { color: #7e57c2; }
 
 </style>
-
 </body>
 
 
